<?xml version="1.0"?>
<package format="2">
  <name>moveit_visual_tools</name>
  <version>3.6.0</version>
  <description>Helper functions for displaying and debugging MoveIt data in Rviz via published markers</description>

  <maintainer email="dave@picknik.ai">Dave Coleman</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/ros-planning/moveit_visual_tools</url>
  <url type="bugtracker">https://github.com/ros-planning/moveit_visual_tools/issues</url>
  <url type="repository">https://github.com/ros-planning/moveit_visual_tools/</url>

  <author email="dave@picknik.ai">Dave Coleman</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rviz_visual_tools</depend>
  <depend>tf2_eigen</depend>
  <depend>geometry_msgs</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_core</depend>
  <depend>roscpp</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>
  <depend>graph_msgs</depend>
  <depend>std_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>roslint</depend>
  <depend>cmake_modules</depend>

</package>
