<?xml version="1.0"?>
<package format="3">
  <name>moveit_visual_tools</name>
  <version>4.1.0</version>
  <description>Helper functions for displaying and debugging MoveIt data in Rviz via published markers</description>

  <maintainer email="dave@picknik.ai">Dave Coleman</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/ros-planning/moveit_visual_tools</url>
  <url type="bugtracker">https://github.com/ros-planning/moveit_visual_tools/issues</url>
  <url type="repository">https://github.com/ros-planning/moveit_visual_tools/</url>

  <author email="dave@picknik.ai">Dave Coleman</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>graph_msgs</depend>
  <depend>moveit_common</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning</depend>
  <depend>rclcpp</depend>
  <depend>rviz_visual_tools</depend>
  <depend>std_msgs</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_ros</depend>
  <depend>trajectory_msgs</depend>
  <depend>visualization_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
